Update dependencies and enhance Scan page UI. Added new packages for Google authentication and CORS support in backend. Refactored Scan component to improve styling and animations using MUI and Framer Motion. Integrated theme provider for consistent styling across the frontend. Cleaned up debug code in config.py and updated package-lock.json and package.json for new dependencies.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,8 @@ python-dotenv
 sqlalchemy
 databases
 google-generativeai
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+requests
+flask-cors
